<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:configChanges="locale"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="	#FFA500"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="37dp"
            android:onClick="gotoPrevious"
            app:srcCompat="@drawable/backarrow" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a19"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="40dp"
            android:textSize="25dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_home_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a23"
        android:textSize="16dp"
        android:textColor="#000000"
        android:textStyle="normal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="normal"
        android:textColor="#000"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="20dp"
        android:id="@+id/address"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a24"
        android:textSize="16dp"
        android:textColor="#000000"
        android:textStyle="normal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="16dp"
        android:textStyle="normal"
        android:textColor="#000"
    android:layout_marginLeft="65dp"
    android:layout_marginTop="10dp"
    android:id="@+id/number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/a25"
        android:textColor="#ffa500"
        android:textSize="15dp" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="173dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="55dp"
        app:srcCompat="@drawable/help" />

</LinearLayout>