<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alcove.partners.siyu.Feedback"
    android:layout_width="match_parent"
    android:configChanges="locale"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="#ffa500"
        android:layout_height="60dp"
        android:id="@+id/toolbar1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a6"
            android:textSize="25dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_home_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                tools:ignore="VectorDrawableCompat" />
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/feedback"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:text="Feedback"
        android:textColor="#ffa500"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/toolbar1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:padding="15dp"
        />


    <TextView
        android:id="@+id/any"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a11"
        android:textSize="20dp"
        android:textColor="#000000"
        android:textStyle="normal"
        android:layout_below="@+id/feedback"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a10"
        android:id="@+id/textv"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_below="@id/any"
        android:layout_margin="10dp"
        android:padding="10dp"
        />


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/spinner"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/textv"
        android:layout_below="@+id/any"
        android:padding="10dp"
        />

    <TextView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a35"
        android:id="@+id/textv2"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_margin="10dp"
        android:layout_below="@id/textv"/>


    <EditText
        android:id="@+id/ed2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editborder"
        android:layout_below="@id/spinner"
        android:layout_toRightOf="@id/textv2"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:gravity="top"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a34"
        android:id="@+id/textv3"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:layout_below="@id/ed2"
        android:textColor="#000000"/>


    <EditText
        android:id="@+id/ed3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editborder"
        android:layout_toRightOf="@id/textv3"
        android:layout_below="@id/ed2"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textMultiLine"
        android:gravity="top"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a6"
        android:id="@+id/textv1"
        android:padding="10dp"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:textColor="#000000"
        android:layout_below="@id/ed3"
        />


    <EditText
        android:id="@+id/ed4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editborder"
        android:inputType="textMultiLine"
        android:layout_toRightOf="@id/textv1"
        android:layout_below="@id/ed3"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_gravity="top"/>
    <Button
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/button_green"
        style="@style/button_text"
        android:id="@+id/but1"
        android:onClick="gotoDatabase"
        android:text="@string/a9"
        android:textColor="#ffa500"
        android:textStyle="bold"
        android:layout_below="@id/ed4"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />
</RelativeLayout>
</ScrollView>


