<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="locale"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    tools:context="com.alcove.partners.siyu.fares">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFA500"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="37dp"
            android:onClick="homeButton"
            app:srcCompat="@drawable/backarrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a3"
            android:layout_marginLeft="40dp"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_home_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a16"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"
            android:textStyle="normal"
            android:padding="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dist"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="16dp"
            android:padding="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a18"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"
            android:textStyle="normal"
            android:padding="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/autofare"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="16dp"
            android:padding="20dp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="20dp"
        android:text="@string/a30"
        android:textColor="#000"
        android:textSize="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:text="@string/a17"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/busfare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
android:textColor="#000"
        android:padding="16dp"
        android:text="@string/a30"
        android:textSize="16dp" />








</LinearLayout>