<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="locale"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    tools:context="com.alcove.partners.siyu.busFare">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFA500"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="37dp"
            android:onClick="gotoPrevious"
            app:srcCompat="@drawable/backarrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a3"
            android:layout_marginLeft="40dp"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_home_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/a31"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="90dp"
    android:textColor="#000000"
    android:textSize="18dp"/>

    <ListView
        android:id="@+id/lv5"
        android:layout_width="wrap_content"
        android:layout_height="402dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"></ListView>

    <TextView
        android:layout_width="370dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:text="@string/a21"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#ffa500"
        android:textSize="16dp" />



</LinearLayout>



