<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:configChanges="locale"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFA500"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="37dp"
            android:onClick="homeButton"
            app:srcCompat="@drawable/backarrow" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a2"
            android:layout_marginLeft="40dp"
            android:textColor="#FFFF"
            android:textSize="25dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_home_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                tools:ignore="VectorDrawableCompat"
                android:layout_alignParentRight="true" />
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>



    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/accImage"
        android:layout_margin="20dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:id="@+id/accName"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="20sp"
        />


    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a23"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textColor="#000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:id="@+id/accAddress"
            android:layout_gravity="center"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a27"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textColor="#000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:id="@+id/accPrice"/>

    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number: "
            android:textColor="#000"
            android:textSize="16dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/accPhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:textColor="#000"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/a25"
        android:textColor="#ffa500"
        android:textSize="15dp" />


</LinearLayout>