<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:configChanges="locale"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="	#FFA500"
        android:layout_height="60dp">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="37dp"
            android:onClick="gotoPrevious"
            app:srcCompat="@drawable/backarrow" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a26"
            android:layout_marginLeft="40dp"
            android:textSize="25dp"
            android:textColor="#FFFF"
            android:textStyle="bold"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_home_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                tools:ignore="VectorDrawableCompat"
                android:layout_alignParentRight="true" />
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>



    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imageT"
            android:layout_margin="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:id="@+id/nameT"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="20sp"
            />


        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a23"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="#000"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="#000"
                android:layout_margin="10dp"
                android:id="@+id/addressT"
                android:layout_gravity="center"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a33"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="#000"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="#000"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:id="@+id/descriptionT"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_margin="10dp"
            android:text="@string/a25"
            android:textColor="#ffa500"
            android:layout_gravity="center"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="15dp" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(Internet Connection is needed)"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/but1"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_green"
            android:onClick="getlink"
            android:padding="10dp"
            android:text="Click for Video"
            android:textColor="#ffa500"
            android:textSize="12dp"
            android:textStyle="bold" />-->

    </LinearLayout>




</LinearLayout>